# testCI

./: CHANGELOG.md  Dockerfile  LICENSE  Marcel.bnf  Marcel.cabal  README.md  test.marcel
.github/workflows/: haskell.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: Marcel-0.1.0.0-inplace.conf  package.cache
src/: MarcelAst.hs  MarcelDef.hs  MarcelOperations.hs  MarcelParser.hs  MarcelVM.hs  MarcelVMDef.hs
test/: Test.hs
