cabal-version:      2.4
name:               Marcel
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             gaby
maintainer:         gabrielle.walgraef@epitech.eu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      MarcelDef
      MarcelAst
      MarcelOperations
      MarcelParser
      MarcelVM
      MarcelVMDef
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

executable Marcel
    import:           warnings
    main-is:          Main.hs
    --other-modules:
    -- other-extensions:
    build-depends:
        base,
        Marcel
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Marcel-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    build-depends:
        base,
        HUnit,
        Marcel
